--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
     "start:generate": "npx serve .output/public"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.0",
-    "@iconify-json/carbon": "^1.1.16",
+    "@antfu/eslint-config": "^0.39.4",
+    "@element-plus/nuxt": "^1.0.5",
+    "@iconify-json/carbon": "^1.1.17",
     "@iconify-json/twemoji": "^1.1.11",
-    "@nuxt/devtools": "^0.5.0",
-    "@nuxtjs/color-mode": "^3.2.0",
+    "@nuxt/devtools": "^0.5.5",
+    "@nuxtjs/i18n": "8.0.0-beta.12",
     "@pinia/nuxt": "^0.4.11",
-    "@unocss/eslint-config": "^0.51.13",
-    "@unocss/nuxt": "^0.51.13",
-    "@vite-pwa/nuxt": "^0.0.9",
+    "@unocss/eslint-config": "^0.52.7",
+    "@unocss/nuxt": "^0.52.7",
+    "@vite-pwa/nuxt": "^0.0.10",
     "@vueuse/nuxt": "^10.1.2",
     "consola": "^3.1.0",
-    "eslint": "^8.41.0",
-    "nuxt": "^3.5.0",
+    "eslint": "^8.42.0",
+    "nuxt": "^3.5.2",
     "pinia": "^2.1.3",
-    "typescript": "^5.0.4",
+    "typescript": "^5.1.3",
     "vue-tsc": "^1.6.5"
   }
 }
